<resources>
    <string name="app_name">eMed</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="toastMsg">"Usted no cuenta con un usuario</string>
    <string name="names">Names</string>
    <string name="lastNames">Last names</string>
    <string name="id">Id</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
</resources>
