<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dip"
    android:gravity="center">
    <ImageView
        android:id="@+id/emed_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/emedlogo"/>

    <EditText android:id="@+id/txtUsername"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/username"/>

    <EditText android:id="@+id/txtPassword"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/password"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="30dip"
        android:inputType="textPassword" />

    <Button android:id="@+id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:onClick="login" />

    <Button android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:onClick="regster" />
</LinearLayout>